# FPGAs-Proyecto-Final

./: Makefile  README.md  sim.sh
blackbox/: blackbox_config.json  fpu_blackbox.json  fpu_stub.cpp  fpu_stub.h  readme.md
blackbox/scripts/: run_cosim.tcl
blackbox/scripts/fpu_hls_project/: hls.app  kernel.xml
blackbox/scripts/fpu_hls_project/solution1/.autopilot/db/driver/src/: CMakeLists.txt
blackbox/scripts/fpu_ip/: component.xml
blackbox/src/: fpu_stub.cpp  fpu_stub.h  fpu_top.sv
blackbox/tb/: dummy_tb.cpp
final4/: FPU_final_wrapper.xsa  final4.xpr
final4/final4.cache/wt/: synthesis.wdf
final4/final4.runs/.jobs/: vrs_config_1.xml
final4/final4.runs/design_1_auto_ds_0_synth_1/: .vivado.begin.rst  design_1_auto_ds_0.dcp  design_1_auto_ds_0.tcl  design_1_auto_ds_0.vds  design_1_auto_ds_0_utilization_synth.pb  design_1_auto_ds_0_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  rundef.js  runme.sh  vivado.jou  vivado.pb
final4/final4.runs/design_1_auto_pc_0_synth_1/: .vivado.begin.rst  design_1_auto_pc_0.dcp  design_1_auto_pc_0.tcl  dont_touch.xdc  (+8 more)
rtl/: fp_unpack.sv  fpu_axi_wrapper_v.v  fpu_bfm.sv  fpu_core.sv  fpu_top.sv
rtl/D1/: fp16_unit.sv  fp32_unit.sv  fp64_unit.sv  fpu_pkg.sv  fpu_top.sv
rtl/D2/: fp_pack.sv  fpu_axi_wrapper.sv  fpu_top.sv
rtl/D3/: README.md  fpu_core.sv  fpu_top.sv
sim/: fpu_tb.vcd  op_a.txt  operations.txt  precision.txt  sim_fpu  video.gtkw
testbench/: fpu_tb.sv  fpu_tb_pkg.sv  tasks.svh  testbench.sv
testbench/D1/: fpu_tb.sv
testbench/D2/: debug_add.sv  debug_div.sv  fpu_tb.sv
testbench/D3/: fpu_tb.sv
(+302 files in other folders)
